--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,14 @@
 * {
   box-sizing: border-box;
+  background-color: thistle;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+main {
+  display: flex;
+  max-width: 100%;
+  margin: auto;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  
 }
